--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,5 @@ scikit_learn==1.4.2
 torch==2.2.2
 tqdm==4.66.2
 transformers==4.41.0
-transformers.egg==info
-deepspeed==0.14.0
 bitsandbytes==0.42.0
+peft==0.10.0
